--- a/dos33.html
+++ b/dos33.html
@@ -419,15 +419,15 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     042 ;
                     043 ;EQUATES REQD TO FIND THINGS IN APPLE II
                     044 ;
-                    045 <a           name="SETVID">SETVID</a>      EQU $FE93
-                    046 <a           name="SETKBD">SETKBD</a>      EQU $FE89
-                    047 <a class="d" name="PROMPT">PROMPT</a>      EQU $33         ; PROMPT CHAR
-                    048 <a class="d" name="OUTSW" >OUTSW</a>       EQU $36         ; OUTPUT VECTOR SWITCH
-                    049 <a class="d" name="INSW"  >INSW</a>        EQU $38         ; INPUT VECTOR SWITCH
-                    050 <a class="d" name="ZPGWRK">ZPGWRK</a>      EQU $40         ; ZERO PAGE WORK CELL
-                    051 <a class="d" name="CNUM"  >CNUM</a>        EQU $44         ; CONVERTED NUMERIC
-                    052 LBUFF       EQU $200        ; LINE BUFFER                   ; Keyboard buffer of 255 chars
-                    053 MULT        EQU $FB63       ; MULT ROUTINE
+                    045 <a class="f" name="SETVID" >SETVID      </a>EQU $FE93
+                    046 <a class="f" name="SETKBD" >SETKBD      </a>EQU $FE89
+                    047 <a class="d" name="PROMPT" >PROMPT      </a>EQU $33         ; PROMPT CHAR
+                    048 <a class="d" name="OUTSW"  >OUTSW       </a>EQU $36         ; OUTPUT VECTOR SWITCH
+                    049 <a class="d" name="INSW"   >INSW        </a>EQU $38         ; INPUT VECTOR SWITCH
+                    050 <a class="d" name="ZPGWRK" >ZPGWRK      </a>EQU $40         ; ZERO PAGE WORK CELL
+                    051 <a class="d" name="CNUM"   >CNUM        </a>EQU $44         ; CONVERTED NUMERIC
+                    052 <a class="d" name="LBUFF"  >LBUFF       </a>EQU $200        ; LINE BUFFER                   ; Keyboard buffer of 255 chars
+                    053 <a class="f" name="MULT"   >MULT        </a>EQU $FB63       ; MULT ROUTINE
 <hr>                    054 INPRT       EQU $FE8B       ; SET IN PORT                   ; === Page <span class="page">111</span> ===
                     055 OUTPRT      EQU $FE95       ; SET OUT PORT
                     056 IBCHN       EQU $E836       ; BASIC RUN                     ; Integer Basic
@@ -886,18 +886,18 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 
 
 <hr>; === <a class="file" name="FVCBUFS">FVCBUFS</a> - File Volume Catalog Buffers, Page <span class="page">86</span>, <b class="ts">T2$2</b> @ $A7 - <b class="ts">T2$3</b> @ $BA, $<span class="adr">B397</span> .. $<span class="adr">B4BA</span> ===<hr>
-                    001             PAGE                                            ; This is why I partially hate old source code:
+                    001             PAGE                                            ; This is why I partially dislike old source code:
                     002 ;MISC DOS WORK CELLS                                        ;   <i>(almost) Everything has been abbreviated</i>
                     003 ;                                                           ;   <i>(almost) to the point of obfuscation.</i>
-3397:00             004 CVDTRK      DFB 0           ; CUR VOL DIR TRK               ; i.e.
-3398:00             005 CVDSEC      DFB 0           ; CUR VOL DIR SECTOR            ;    ENT = Entry
-3399:00 00          006 CURCCB      DFB 0,0         ; CURRENT CCB ADR               ;    ALC = Allocation
-339B:00             007 ENTSTK      DFB 0           ; ENTRY STACK POINTER           ; Why are we futzing with the stack pointer???
-339C:00             008 TEMP1       DFB 0           ; TEMP BYTE1                    ; /sarcasm o7 Captain Obvious
-339D:00             009 TEMP2       DFB 0           ; TEMP BYTE 2                   ; *note* All the cool kids use "o7" for salute these days
-339E:00             010 TEMP3       DFB 0           ; TEMP BYTE 3
-339F:00             011 ENTSLT      DFB 0           ; BOOT SLOT SAVE
-33A0:00 00 FF FF    012 ALC10S      DFB 0,0,$FF,$FF ; ALLOCATION TRACK BIT MAP      ; *sigh* wastes 2 bytes/track since 32 sectors/track!
+3397:00             004 <a class="d" name="CVDTRK">CVDTRK      </a>DFB 0           ; CUR VOL DIR TRK               ; i.e.
+3398:00             005 <a class="d" name="CVDSEC">CVDSEC      </a>DFB 0           ; CUR VOL DIR SECTOR            ;    ENT = Entry
+3399:00 00          006 <a class="d" name="CURCCB">CURCCB      </a>DFB 0,0         ; CURRENT CCB ADR               ;    ALC = Allocation
+339B:00             007 <a class="d" name="ENTSTK">ENTSTK      </a>DFB 0           ; ENTRY STACK POINTER           ; Why are we futzing with the stack pointer???
+339C:00             008 <a class="d" name="TEMP1" >TEMP1       </a>DFB 0           ; TEMP BYTE1                    ; /sarcasm o7 Captain Obvious
+339D:00             009 <a class="d" name="TEMP2" >TEMP2       </a>DFB 0           ; TEMP BYTE 2                   ; *note* All the cool kids use "o7" for salute these days
+339E:00             010 <a class="d" name="TEMP3" >TEMP3       </a>DFB 0           ; TEMP BYTE 3
+339F:00             011 <a class="d" name="ENTSLT">ENTSLT      </a>DFB 0           ; BOOT SLOT SAVE
+33A0:00 00 FF FF    012 <a class="d" name="ALC10S">ALC10S      </a>DFB 0,0,$FF,$FF ; ALLOCATION TRACK BIT MAP      ; *sigh* wastes 2 bytes/track since 32 sectors/track!
                                                                                     ; The thinking was probably:
                                                                                     ;     DOS 3.2 = 13 sector
                                                                                     ;     DOS 3.3 = 16 sector
@@ -907,9 +907,9 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                                                                     ; your spidey sense should be tingling:
                                                                                     ;   <i>"RESERVED = I pulled this out of my ass -- </i>
                                                                                     ;   <i> because I didn't actually <b>measure</b> what is <b>needed</b>!"</i>
-33A4:01 0A 64       013 CVTAB       DFB 1,10,100    ; CONVERSION TABLE              ; Powers of 10, Sadly Applesoft's DECTBL @ $EE6C is useless :-/
+33A4:01 0A 64       013 <a class="d" name="CVTAB" >CVTAB       </a>DFB 1,10,100    ; CONVERSION TABLE              ; Powers of 10, Sadly Applesoft's DECTBL @ $EE6C is useless :-/
                     014             MSC ON                                          ; Switch ASCII to Apple Text (high bit set)
-33A7:D4 C9 C1 C2    015 FTTAB       ASC "TIAB"      ; FILE COVERSTION TABLE"        ;
+33A7:D4 C9 C1 C2    015 <a class="d" name="FTTAB" >FTTAB       </a>ASC "TIAB"      ; FILE COVERSTION TABLE"        ;
 33AB:D3 D2 C1 C2    016             ASC "SRAB"                                      ; *sigh* Really, you just <i>had</i> to re-use AB ??
                                                                                     ; <a class="dumb" name="HNTDAFS2">HNTDAFS #2</a>
                                                                                     ; <i>Gee, how about using, oh I don't know, CD</i>
@@ -917,39 +917,39 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                                                                     ;    C = Child Directory; pointer to parent T/S
                                                                                     ;    D = Directory (child)
                                                                                     ; Yeah, yeah 20/20
-33AF:A0 C5 CD D5    017 VOLMES      ASC " EMULOV DISK" ; "DISK VOLUME " BACWARDS    ; *sigh* Micro-optimization
+33AF:A0 C5 CD D5    017 <a class="d" name="VOLMES">VOLMES      </a>ASC " EMULOV DISK" ; "DISK VOLUME " BACWARDS    ; *sigh* Micro-optimization
 33B3:CC CF D6 A0                                                                    ; Not that these are bad but /sarcmasm <i>Lets focus on</i>
 33B7:CB D3 C9 C4                                                                    ; <i>a <b>single</b> tree, and completely miss the forest!</i>
                     018             MSB OFF                                         ; Switch back to 7-bit ASCII
-                    019 VML         EQU *-<a class="d" href="#VOLMES">VOLMES</a>-1                                  ; File <a class="file" href="#FDELCAT">FDELCAT</a>, Func <a class="x" href="#RDIR">RDIR</a>, Line <span class="todo">TODO</span>
+                    019 <a class="d" name="VML"   >VML         </a>EQU *-<a class="d" href="#VOLMES">VOLMES</a>-1                                  ; File <a class="file" href="#FDELCAT">FDELCAT</a>, Func <a class="x" href="#RDIR">RDIR</a>, Line <span class="todo">TODO</span>
                     020             PAGE
-                    021 ;VTOC RECORD AREA
-                    022 VTOC        EQU *                                           ; T11S0 === Normal snarky commentary ===
-33BB:04             023 VDOST       DFB 4           ; DOS TYPE                      ; 00:04 *sarcasm* If only we could do FILESYSTEM_TYPE_VTOC = $4
-33BC:11             024 VDIRTK      DFB 17          ; COLUME DIRECTORY SECTOR       ; 01:11 1) *spelling* VOLUME *sigh* 2) TRACK not sector
-33BD:0F             025 VDIRSC      DFB 15          ; VOLUME DIRECTORY SECTOR       ; 02:0F 
-33BE:04             026 VDOSRN      DFB 4           ; DOS RELEASE NUMBER            ; 03:03 *sarcasm* I guess <b>VERSION</b> made too much sense.
+                    021 ;VTOC RECORD AREA                                           ; === VTOC ===
+                    022 <a class="d" name="VTOC"  >VTOC        </a>EQU *                                           ; T11S0 === Normal snarky commentary ===
+33BB:04             023 <a class="d" name="VDOST" >VDOST       </a>DFB 4           ; DOS TYPE                      ; 00:04 *sarcasm* If only we could do FILESYSTEM_TYPE_VTOC = $4
+33BC:11             024 <a class="d" name="VDIRTK">VDIRTK      </a>DFB 17          ; COLUME DIRECTORY SECTOR       ; 01:11 1) *spelling* VOLUME *sigh* 2) TRACK not sector
+33BD:0F             025 <a class="d" name="VDIRSC">VDIRSC      </a>DFB 15          ; VOLUME DIRECTORY SECTOR       ; 02:0F 
+33BE:04             026 <a class="d" name="VDOSRN">VDOSRN      </a>DFB 4           ; DOS RELEASE NUMBER            ; 03:03 *sarcasm* I guess <b>VERSION</b> made too much sense.
 33BF:00             027             DFB 0           ; SPARE                         ; 04:01 *sarcasm* Because <i>someday</i> these <i>might</i> be used ...
 33C0:00             028             DFB 0           ; SPARE                         ; 05:00 
-33C1:FE             029 VVOLNO      DFB $FE         ; VOLUME NUMBER                 ; 06:FE 
+33C1:FE             029 <a class="d" name="VVOLNO">VVOLNO      </a>DFB $FE         ; VOLUME NUMBER                 ; 06:FE 
 33C2:0 0 0 0 0 0    030             DS 32           ; SPARE                         ; 07:00 Gee, here's an idea, instead of wasting space in the VTOC:
 33C8:0 0 0 0 0 0 0 0                                                                ;       1) Pack our data by removing all unused crap,
 33D0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ;       2) Put VTOC data as first XX bytes in the CATALOG <b class="ts">T11$F</b>
 33E0:00 00                                                                          ;       If we were <i>really</i> smart <b class="ts">T11</b> would reside on <b class="ts">T2$5..F</b>
-33E2:7A             031 VTDMS       DFB 122         ; MAX SECTORS IN A FILE DIR     ; 27:7A *sigh* not 128 so we can BMI (Branch on Minus) ???
-33E3:00 00 00 00    032 VSPARE      DS 8            ; SPARES                        ; 28:00 *sarcasm* Who cares, we have 140KB, right!
+33E2:7A             031 <a class="d" name="VTDMS" >VTDMS       </a>DFB 122         ; MAX SECTORS IN A FILE DIR     ; 27:7A *sigh* not 128 so we can BMI (Branch on Minus) ???
+33E3:00 00 00 00    032 <a class="d" name="VSPARE">VSPARE      </a>DS 8            ; SPARES                        ; 28:00 *sarcasm* Who cares, we have 140KB, right!
 33E7:00 00 00 00    033 ;
-33EB:11             034 VALCA1      DFB 17          ; ALOCATION ALGORITHM BYTE 1    ; 30:0D Last allocated track <span class="todo">TODO</span> Cross-Ref
-33EC:01             035 VALC2       DFB 1           ; AA BYTE2                      ; 31:FF Direction of last tack allocation --  <span class="todo">TODO</span> Cross-Ref
+33EB:11             034 <a class="d" name="VALCA1">VALCA1      </a>DFB 17          ; ALOCATION ALGORITHM BYTE 1    ; 30:0D Last allocated track <span class="todo">TODO</span> Cross-Ref
+33EC:01             035 <a class="d" name="VALCA2">VALCA2      </a>DFB 1           ; AA BYTE2                      ; 31:FF Direction of last tack allocation --  <span class="todo">TODO</span> Cross-Ref
                                                                                     ;           +$01 inwards  to <span class="ts">T22</span>,
                                                                                     ;           -$FF outwards to <span class="ts">T00</span>.
-33ED:00             036 VALC3       DFB 0           ; AA BYTE3                      ; 32:00 *sigh* wasted byte *sarcasm* <i>I _really_ don't know what we</i>
-33EE:00             037 VALC4       DFB 0           ; AA BYTE4                      ; 33:00 *sigh* wasted byte   <i>would do without you Captain Obvious!</i>
-33EF:23             038 VNOTRK      DFB 35          ; NO TRACKS ON VOL              ; 34:23 *note* "No" = Number
-33F0:10             039 VNOSEC      DFB 16          ; NO SECTORS PER TRACK          ; 35:10          Evidence that one day DOS 3.4+ might support:
-33F1:00 01          040 VSECLN      DW 256          ; NO. BYTES PER SECTOR          ; 36:00 (Little)     &gt;  16 sectors/track
+33ED:00             036 <a class="d" name="VALCA3">VALCA3      </a>DFB 0           ; AA BYTE3                      ; 32:00 *sigh* wasted byte *sarcasm* <i>I _really_ don't know what we</i>
+33EE:00             037 <a class="d" name="VALCA4">VALCA4      </a>DFB 0           ; AA BYTE4                      ; 33:00 *sigh* wasted byte   <i>would do without you Captain Obvious!</i>
+33EF:23             038 <a class="d" name="VNOTRK">VNOTRK      </a>DFB 35          ; NO TRACKS ON VOL              ; 34:23 *note* "No" = Number
+33F0:10             039 <a class="d" name="VNOSEC">VNOSEC      </a>DFB 16          ; NO SECTORS PER TRACK          ; 35:10          Evidence that one day DOS 3.4+ might support:
+33F1:00 01          040 <a class="d" name="VSECLN">VSECLN      </a>DW 256          ; NO. BYTES PER SECTOR          ; 36:00 (Little)     &gt;  16 sectors/track
                     041 ;                                                           ; 37:01 (Endian) and &gt; 256 bytes/sector.
-                    042 VSECAL      EQU *                                           ;       *note* <b>Actual</b> VTOC header is $F3-$BB = $38 bytes
+                    042 <a class="d" name="VSECAL">VSECAL      </a>EQU *                                           ;       *note* <b>Actual</b> VTOC header is $F3-$BB = $38 bytes
                     043 ;SECTORS ALLOCATED BY BIT MAP                               ;       [0] Sectors: FEDCBA98    0=Used
                     044 ;4 BYTES OF BITS PER TRACK                                  ;       [1] Sectors: 76543210    1=Free
                     045 ;LEFT MOST BIT REPRESENTS SECTOR N                          ;*sigh* Let us <b>waste</b>     : 35*4 bytes = 140 bytes ($8C)
@@ -967,11 +967,11 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 3450:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; <a class="dumb" name="HNTDAFS3">HNTDAFS #3</a>
 3460:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; Design fault: DOS is <b>unable</b> to use Track 0 to store user files.
 3470:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; This means a non-bootable <i>data disk</i> is robbed of 16 sectors.
-3480:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; <span class="todo">TODO</a> See File, Func, Line</span>
+3480:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; See File <a class="file" href="#FLOCSEC">FLOCSEC</a>, Func <a class="x" href="#GETSEC">GETSEC</a>, Line <span class="todo">TODO</span>
 3490:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
 34A0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
 34B0:0 0 0 0 0      051 ;
-34B4:0 0 0 0 0      052 ;VOLUME DIRECTORY AREA
+34B4:0 0 0 0 0      052 ;VOLUME DIRECTORY AREA                                      ; === CATALOG ===
 34B8:0 0 0          053 ;
 <hr>                    054 VOLDIR      EQU *           ;                               ; === Page <span class="page">87</span> ===
 34BB:02             055 VDTCDE      DFB 2           ; VOLUME DIRECTORY TYPE CODE    ; *sarcasm* if only we could do FILESYSTEM_TYPE_CATALOG = $2
@@ -999,7 +999,6 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     077 
                     078 
                     079 
-
                     080 
                     081 
                     082 
@@ -1010,7 +1009,6 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     087 
                     088 
                     089 
-
                     090 
                     091 
                     092 
@@ -1021,7 +1019,6 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     097 
                     098 
                     099 
-
                     100 
                     101 
                     102 
@@ -1032,7 +1029,6 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     107 
                     108 
                     109 
-
                     100 
                     101 
                     102 
@@ -1043,7 +1039,6 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     107 
                     108 
                     109 
-
                     110 
                     111 
                     112 
